# pious

./: #roadmap.md#  .#roadmap.md  .gitignore  CMakeLists.txt  GTest.cmake  current-task.md  example.json  limitations.md  readme.md  roadmap.md
api/: pious.h  pious_device.h  pious_types.h  pious_unit.h
cmake/modules/: EmceeFiles.cmake  FindJACK.cmake  PiousFiles.cmake
include/api/: pious_api.h  pious_db.h  pious_device.h  pious_environment.h  pious_port_instance.h  pious_rack.h  pious_spec.h  pious_sys.h  pious_workspace.h
include/emcee/: array.hpp  deleter.hpp  destructor.hpp  emcee.hpp  map.hpp  masked_cell_vector.hpp  memory.hpp  memory_dependent.hpp  memory_setter.hpp  new.hpp  new_allocation_block.hpp  new_allocation_block_calculation.hpp  pow2.hpp  reference_counter.hpp  set.hpp  shared_count.hpp  shared_ptr.hpp  string.hpp  unique_ptr.hpp  util.hpp  vector.hpp  weak_count.hpp  weak_ptr.hpp
include/pious/: add_connection.hpp  add_connection_port.hpp  add_connection_port_dest.hpp  add_device.hpp  connection.hpp  connection_spec.hpp  db.hpp  deleter.hpp  destructor.hpp  device.hpp  device_container.hpp  device_instance.hpp  device_manager.hpp  device_path_extractor.hpp  device_path_search.hpp  device_spec.hpp  dsp.hpp  dsp_planner.hpp  id.hpp  instance_factory.hpp  memory_dependent.hpp  new.hpp  pious.hpp  port.hpp  port_instance.hpp  port_spec.hpp  process.hpp  rack.hpp  reference_spec.hpp  scope.hpp  signal_channel.hpp  signal_hold_event.hpp  spec_finder.hpp  spec_to_devices.hpp  spec_to_instance.hpp
include/pious/mock/: mock_device.hpp  mock_device_manager.hpp
include/pious_dsp_lib/: var_rms.hpp
pious/: CMakeLists.txt  array.hpp  deleter.hpp  destructor.hpp  device.hpp  device_spec.cpp  device_spec.hpp  example.json  id.cpp  main.cpp  memory.cpp  memory.hpp  memory_dependent.cpp  memory_setter.cpp  memory_setter.hpp  new.cpp  new.hpp  new_allocation_block.cpp  new_allocation_block.hpp  new_allocation_block_calculation.hpp  object.cpp  object.hpp  os.cpp  os.hpp  os_dependent.hpp  os_memory.cpp  os_memory.hpp  os_op.hpp  os_setter.cpp  os_setter.hpp  pious.h  pious_allocator.h  port.cpp  port.hpp  scoped_ptr.hpp  string.cpp  string.hpp  unique_ptr.hpp  util.cpp  util.hpp  (+1 more)
pious_tests/: CMakeLists.txt
pious_tests/basic_tests/: CMakeLists.txt  basic_check.cpp  class_method_notifier.hpp  count_calls.hpp  test_device_manager.cpp  test_id.cpp  test_main.cpp  test_map.cpp  test_masked_cell_vector.cpp  test_new.cpp  test_new_memory_block_calculation.cpp  test_object.cpp  test_pious_db.cpp  test_pious_spec.cpp  test_rack.cpp  test_shared_ptr.cpp  test_string.cpp  test_unique_ptr.cpp  test_var_rms.cpp  test_vector.cpp  test_weak_count.cpp  test_weak_ptr.cpp
pious_tests/lib/gmock-1.7.0/: aclocal.m4  configure
pious_tests/lib/gmock-1.7.0/build-aux/: config.guess
pious_tests/lib/gmock-1.7.0/gtest/: README  configure
pious_tests/lib/gmock-1.7.0/gtest/codegear/: gtest.cbproj  gtest_main.cbproj  gtest_unittest.cbproj
pious_tests/lib/gmock-1.7.0/gtest/include/gtest/internal/: gtest-port.h
pious_tests/lib/gmock-1.7.0/gtest/m4/: libtool.m4
pious_tests/lib/gmock-1.7.0/gtest/msvc/: gtest-md.sln  gtest-md.vcproj  gtest.sln  gtest.vcproj  gtest_main-md.vcproj  gtest_main.vcproj  gtest_prod_test-md.vcproj  gtest_prod_test.vcproj  gtest_unittest-md.vcproj  gtest_unittest.vcproj
pious_tests/lib/gmock-1.7.0/gtest/src/: gtest-death-test.cc
pious_tests/lib/gmock-1.7.0/gtest/xcode/Samples/FrameworkSample/WidgetFramework.xcodeproj/: project.pbxproj
pious_tests/lib/gmock-1.7.0/gtest/xcode/gtest.xcodeproj/: project.pbxproj
pious_tests/lib/gmock-1.7.0/msvc/2005/: gmock.sln  gmock.vcproj  gmock_main.vcproj  gmock_test.vcproj
pious_tests/lib/gmock-1.7.0/msvc/2010/: gmock.sln  gmock.vcxproj  gmock_main.vcxproj  gmock_test.vcxproj
pious_tests/lib/gtest-1.7.0/: README.libvpx
src/: CMakeLists.txt  PiousDspLibFiles.cmake  PiousFiles.cmake
src/emcee/: CMakeLists.txt  array.hpp  deleter.hpp  destructor.hpp  emcee.hpp  literal.cpp  literal.hpp  map.hpp  masked_cell_vector.hpp  memory.cpp  memory.hpp  memory_dependent.cpp  memory_dependent.hpp  memory_setter.cpp  memory_setter.hpp  new.cpp  new.hpp  new_allocation_block.cpp  new_allocation_block.hpp  object.cpp  object.hpp  platform.cpp  platform.hpp  pow2.cpp  pow2.hpp  readme.md  reference_counter.cpp  reference_counter.hpp  set.hpp  shared_count.cpp  shared_count.hpp  shared_ptr.hpp  string.cpp  string.hpp  unique_ptr.hpp  util.cpp  util.hpp  vector.hpp  weak_count.cpp  weak_count.hpp  (+1 more)
src/include/api/: CMakeLists.txt  db.h  pious_api.h  pious_device_instance.h  pious_spec.h
src/pious/: CMakeLists.txt  add_connection.cpp  add_connection.hpp  add_connection_port.cpp  add_connection_port.hpp  add_connection_port_dest.cpp  add_connection_port_dest.hpp  add_device.cpp  add_device.hpp  connection.cpp  connection_spec.cpp  connection_spec.hpp  db.cpp  db.hpp  device.cpp  device.hpp  device_container.hpp  device_manager.hpp  device_path_extractor.cpp  device_path_extractor.hpp  device_path_search.cpp  device_path_search.hpp  device_spec.cpp  device_spec.hpp  dsp.hpp  dsp_planner.cpp  dsp_planner.hpp  example.json  id.cpp  id.hpp  instance_factory.hpp  pious.hpp  pious_db.cpp  pious_device_instance.cpp  port.cpp  port.hpp  port_spec.cpp  port_spec.hpp  process.hpp  rack.cpp  (+13 more)
src/pious/mock/: mock_device_container.hpp
src/pious_dsp_lib/: CMakeLists.txt  var_rms.cpp  var_rms.hpp
src/pious_jack_server/: CMakeLists.txt  pious_jack_main.cpp  pious_main.cpp
test/: CMakeLists.txt
test/emcee/: CMakeLists.txt  test_new.cpp  test_object.cpp  test_set.cpp  test_unique_ptr.cpp  test_vector.cpp  test_weak_ptr.cpp
test/pious/: CMakeLists.txt  count_calls.hpp  test_device_spec.cpp  test_pious_db.cpp
test/src/: class_method_notifier.hpp  test_device_spec.cpp  test_id.cpp  test_literal.cpp  test_map.cpp  test_masked_cell_vector.cpp  test_new.cpp  test_object.cpp  test_pious_db.cpp  test_rack.cpp  test_set.cpp  test_shared_ptr.cpp  test_string.cpp  test_unique_ptr.cpp  test_var_rms.cpp  test_vector.cpp  test_weak_count.cpp
