find_package(Boost 1.48 REQUIRED)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIR})
else ()
    message(FATAL_ERROR "Boost required.")
endif ()

include_directories(${PIOUS_HEADERS_DIR})
add_subdirectory(include)
add_subdirectory(pious)
add_subdirectory(emcee)
add_subdirectory(pious_dsp_lib)
add_subdirectory(pious_jack_server)
